GNOME Bugzilla – Bug 646887
Crash when trying to show keyboard layout in fallback mode
Last modified: 2011-04-06 12:40:58 UTC
Program received signal SIGSEGV, Segmentation fault. xkl_config_registry_find_object (config=0x0, format=0xb3aed214 "/xkbConfigRegistry/layoutList/layout[configItem/name = '%s%s']", arg1=0xb3aebacf "", pitem=0x82583a8, pnode=0x0) at xklavier_config.c:386 386 if (!xkl_config_registry_is_initialized(config)) (gdb) bt
+ Trace 226608
The issue is that we pass a NULL registry to gkbd_keyboard_drawing_dialog_set_group().
Potential blocker for the release.
Created attachment 185259 [details] [review] keyboard: Fix crash on "Show layout" We need to make sure that we do have a xkl registry available.
Looks fine to me. Sergey?
FWIW, the release team would appreciate a 3.0.0.1 release with this fix (assuming the fix is fine according to maintainers) :-)
Looks fine to me.
Comment on attachment 185259 [details] [review] keyboard: Fix crash on "Show layout" pushed