keyboard: Fix crash on "Show layout"

We need to make sure that we do have a xkl registry available.

https://bugzilla.gnome.org/show_bug.cgi?id=646887